@@ -2,8 +2,11 @@ package com.example.bookstore.service.impl;
 
 import com.example.bookstore.constant.ApiURL;
 import com.example.bookstore.constant.Constant;
+import com.example.bookstore.exception.NotFoundException;
+import com.example.bookstore.mapper.DiscountMapper;
 import com.example.bookstore.model.discount.Discount;
 import com.example.bookstore.payload.Discount.DiscountRequest;
+import com.example.bookstore.payload.Discount.DiscountResponse;
 import com.example.bookstore.payload.MessageResponse;
 import com.example.bookstore.repository.DiscountRepository;
 import com.example.bookstore.service.DiscountService;
@@ -12,26 +15,21 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class DiscountServiceImpl implements DiscountService {
 
     @Autowired
     private DiscountRepository discountRepository;
+    @Autowired
+    private DiscountMapper discountMapper;
+
 
     @Override
     public MessageResponse create(DiscountRequest discountRequest) {
 
-        Discount discount = new Discount();
-
-        discount.setName(discountRequest.getName());
-        discount.setType(discountRequest.getType());
-        discount.setPriceApplicable(discountRequest.getPriceApplicable());
-        discount.setPercent(discountRequest.getPercent());
-        discount.setTotalDecrease(discountRequest.getTotalDecrease());
-
-        discount.setStart(discountRequest.getStart());
-        discount.setEnd(discountRequest.getEnd());
+        Discount discount = discountMapper.toEntity(discountRequest);
 
         discountRepository.save(discount);
 
@@ -41,18 +39,13 @@ public class DiscountServiceImpl implements DiscountService {
     @Override
     public MessageResponse update(long id, DiscountRequest discountRequest) {
 
-        Discount discountOld = discountRepository.findById(id).orElseThrow();
+        Discount discountOld = discountRepository.findById(id).orElseThrow(() ->
+                new NotFoundException("Not found: " + id));
 
-        discountOld.setName(discountRequest.getName());
-        discountOld.setType(discountRequest.getType());
-        discountOld.setPriceApplicable(discountRequest.getPriceApplicable());
-        discountOld.setPercent(discountRequest.getPercent());
-        discountOld.setTotalDecrease(discountRequest.getTotalDecrease());
+        Discount discountUpdate = discountMapper.toEntity(discountRequest);
+        discountUpdate.setId(discountOld.getId());
 
-        discountOld.setStart(discountRequest.getStart());
-        discountOld.setEnd(discountRequest.getEnd());
-
-        discountRepository.save(discountOld);
+        discountRepository.save(discountUpdate);
 
         return new MessageResponse(HttpServletResponse.SC_OK, Constant.SUCCESS, ApiURL.DISCOUNT);
     }
@@ -62,41 +55,70 @@ public class DiscountServiceImpl implements DiscountService {
 
         Discount discount = discountRepository.findById(id).orElseThrow();
 
-        if(!discount.isDelete())
+        if (!discount.isDelete())
             discount.setDelete(true);
+
+        discountRepository.save(discount);
 
         return new MessageResponse(HttpServletResponse.SC_OK, Constant.SUCCESS, ApiURL.DISCOUNT);
     }
 
     @Override
-    public List<Discount> findByType(String type) {
+    public List<DiscountResponse> findByType(String type) {
+        List<Discount> discount = discountRepository.findByType(type);
 
-        List<Discount> discountList = discountRepository.findByType(type).stream().toList();
+        if (discount.isEmpty()) {
+            throw new NotFoundException("Not found" + type);
+        }
 
-        return discountList;
-    }
-
-    @Override
-    public List<Discount> findByIsDeleteNot() {
-
-        List<Discount> discountList = discountRepository.findByIsDeleteNot().stream().toList();
+        List<DiscountResponse> discountList = discountRepository.findByType(type).stream().
+                map(item -> discountMapper.toDTO(item)).collect(Collectors.toList());
 
         return discountList;
     }
 
     @Override
-    public List<Discount> findAll() {
+    public List<DiscountResponse> findByName(String name) {
+        List<Discount> discount = discountRepository.findByName(name);
 
-        List<Discount> discountList = discountRepository.findAll().stream().toList();
+        if (discount.isEmpty()) {
+            throw new NotFoundException("Not found" + name);
+        }
+
+        List<DiscountResponse> discountList = discountRepository.findByName(name).stream().
+                map(item ->discountMapper.toDTO(item)).collect(Collectors.toList());
+        return discountList;
+    }
+
+    @Override
+    public List<DiscountResponse> findByIsDeleteNot() {
+        List<Discount> discount = discountRepository.findByIsDeleteNot();
+
+        if (discount.isEmpty()) {
+            throw new NotFoundException("Not found: discount deleted");
+        }
+
+        List<DiscountResponse> discountList = discountRepository.findByIsDeleteNot().stream().
+                map(item -> discountMapper.toDTO(item)).collect(Collectors.toList());
 
         return discountList;
     }
 
     @Override
-    public Discount findById(long id) {
+    public List<DiscountResponse> findAll() {
 
-        Discount discount = discountRepository.findById(id).orElseThrow();
+        List<DiscountResponse> discountList = discountRepository.findByIsDeleteNot().stream().
+                map(item -> discountMapper.toDTO(item)).collect(Collectors.toList());
 
-        return discount;
+        return discountList;
+    }
+
+    @Override
+    public DiscountResponse findById(long id) {
+
+        DiscountResponse discountResponse = this.discountMapper.toDTO(discountRepository.findById(id).orElseThrow(() ->
+                new NotFoundException("Not found: " + id)));
+
+        return discountResponse;
     }
 }
